chore: include-labels 추가

--- a/.github/release-drafter-config.yaml
+++ b/.github/release-drafter-config.yaml
@@ -15,6 +15,11 @@ categories:
 change-template: '- $TITLE ([#$NUMBER]($URL)) by @$AUTHOR'
 exclude-labels:
   - 'skip-release-tag'
+include-labels:
+  - 'major'
+  - 'bug'
+  - 'enhancement'
+  - 'chore'
 version-resolver:
   major:
     labels:
